--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="preconnect" href="http://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="container container-flex">
             <h1>EBAC Motors</h1>
             <div class="menu-hamburguer">
                 <span></span>
@@ -49,16 +50,170 @@
         <img src="images/slide2.png" alt="Carro da BMW">
         <img src="images/slide3.png" alt="Carro da Ford">
     </div>
+    <section id="sobre-a-loja">
+        <div class="container container-flex">
+            <img src="images/loja.jpg" alt="Imagem da loja EBAC Motors">
+            <div>
+                <h2>Sobre a EBAC Motors</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nobis ipsum labore maiores quis, ipsam
+                    molestias pariatur? Nesciunt esse rem repudiandae, aliquid inventore repellat consectetur odio eaque
+                    dolorum maiores optio!
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam aspernatur ullam at sunt modi, odio,
+                    quidem autem facilis dolores, atque impedit nemo distinctio veritatis nesciunt deleniti est iste
+                    ipsam. Dolorum!
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Em destaque</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Promoções</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('#carousel-imagens').slick({
-                autoplay:true               
+                autoplay: true
+            });
+
+            $('.menu-hamburguer').click(function () {
+                $('nav').slideToggle();
             })
         })
     </script>
 </body>
+
 </html>
