--- a/index.html
+++ b/index.html
@@ -200,32 +200,33 @@
         </div>
     </section>
 
-    <section  id="contato">
-        <div class="container"></div>
-        <h2>Entre em contato</h2>
-        <form>
-            <div class="form-campo">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome">
-            </div>
-            <div class="form-campo">
-                <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone">
-            </div>
-            <div class="form-campo">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email">
-            </div>
-            <div class="form-campo">
-                <label for="veiculo-interesse">Veículo de interesse:</label>
-                <input type="text" id="veiculo-interesse" name="veiculoDeInteresse">
-            </div>
-            <div class="form-campo">
-                <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem"></textarea>
-            </div>
-            <button type="submit">Enviar</button>
-        </form>
+    <section id="contato">
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome">
+                </div>
+                <div class="form-campo">
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone" name="telefone">
+                </div>
+                <div class="form-campo">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="form-campo">
+                    <label for="veiculo-interesse">Veículo de interesse:</label>
+                    <input type="text" id="veiculo-interesse" name="veiculoDeInteresse">
+                </div>
+                <div class="form-campo">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem" name="mensagem"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
     </section>
     <footer>
         <div class="container container-flex">
@@ -260,4 +261,5 @@
     <script src="js/messages_pt_BR.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
